--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     
     <style>
         body {
@@ -12,14 +11,14 @@
             padding: 0;
             background-color: #f4f4f4;
             display: flex;
-            flex-direction: column; /* Change to column direction */
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             height: 100vh;
         }
 
         h1 {
-            margin-bottom: 20px; /* Add margin between h1 and ul */
+            margin-bottom: 20px; 
         }
 
         ul {
@@ -29,11 +28,11 @@
             background-color: blue;
             overflow: hidden;
             display: flex;
-            flex-direction: column; /* Arrange items vertically */
+            flex-direction: column; 
         }
 
         li {
-            margin: 5px 0; /* Add some vertical spacing between items */
+            margin: 5px 0; 
         }
 
         li a {
